--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f0f0f0;
+  background-color: #d50b0b;
   font-family: Helvetica,Arial,"Hiragino Sans GB","Microsoft Yahei","微软雅黑","华文细黑",sans-serif;
   font-size:small;
 }
