--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -341,10 +341,10 @@ a.sidebar-nav-item:focus {
 }
 .related-posts h3 {
   margin-top: 0;
-  font-size: 12px;
+  font-size: 1rem;
 }
 .related-posts li small {
-  font-size: 75%;
+  font-size: 1rem;
   color: #999;
 }
 .related-posts li a:hover {
